--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ content:
   - title: Certifications # Title for the section
     layout: text # Type of content section (list/text)
     content: |
-      ![Certs](/marc-cenon.github.io/images/certs.png "CERTS")
+      ![Certs](https://github.com/marc-cenon/marc-cenon.github.io/blob/main/images/certs.png "CERTS")
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
@@ -70,7 +70,7 @@ content:
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
       Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      ![Trees](/marc-cenon.github.io/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
