--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: marc.cenon33@gmail.com
 website: https://marc-cenon.github.io
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 github_username:  marc-cenon
