--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ github_username:  marc-cenon
 linkedin_username: marccenon33
 
 # About Section
-# about_title: About Me
+about_title: 
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Marc ... 35 ans ... trail runner ... beer drinker ..... passionné d'informatique et de nouvelles technologies
