--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ linkedin_username: marccenon33
 
 # About Section
 about_title:   
-about_profile_image: images/profile.jpg
+about_profile_image: images/myAvatar.png
 about_content: | # this will include new lines to allow paragraphs
   Marc ... 35 ans ... trail runner ... beer drinker ..... passionné d'informatique et de nouvelles technologies
 
