--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ content:
     layout: list
     content: # this will include new lines to allow paragraphs
       - layout: top-middle
-        title: |
+        description: |
           - Trail running
           - Canicross
           - Cuisine
