--- a/_config.yml
+++ b/_config.yml
@@ -111,13 +111,13 @@ content:
     layout: list
     content: # this will include new lines to allow paragraphs
       - layout: top-middle
-        description: |
+        description: | <center>
           - Trail running
           - Canicross
           - Cuisine
           - Informatique
           - Voyages
-          - Livres de syfy
+          - Livres de syfy </center>
 
 # Footer
 footer_show_references: false
