--- a/_config.yml
+++ b/_config.yml
@@ -108,16 +108,14 @@ content:
           Licence en Marketing International avec échange culturel au Japon
 
   - title: Hobbies
-    layout: list
-    content: # this will include new lines to allow paragraphs
-      - layout: top-middle
-        description: | <center>
-          - Trail running
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+         <center> Trail running </center>
           - Canicross
           - Cuisine
           - Informatique
           - Voyages
-          - Livres de syfy </center>
+          - Livres de syfy
 
 # Footer
 footer_show_references: false
