--- a/_config.yml
+++ b/_config.yml
@@ -52,36 +52,36 @@ content:
         link: cgi.com/france/fr-fr
         caption: 2021 - Aujourd'hui
         description: | # this will include new lines to allow paragraphs
-          Ingénieur SysAdmin / Devops
-          - Principales technologies utilisées: Linux - VMWARE - Ansible - Docker - Kubernetes - CI/CD
+          <font size="4"><center> Ingénieur SysAdmin / Devops </center></font>
+          <font size="4"><center>Principales technologies utilisées: Linux - VMWARE - Ansible - Docker - Kubernetes - CI/CD </center></font>
 
       - layout: top-middle
         title: Bureau Feret
         caption: 2018 - 2020
         description: | # this will include new lines to allow paragraphs
-          Courtage Vins - Support Informatique
-          - Principales technologies utilisées: Docker - Mysql - Linux - Windows
+          <font size="4"><center> Courtage Vins - Support Informatique </center></font>
+          <font size="4"><center> Principales technologies utilisées: Docker - Mysql - Linux - Windows </center></font>
 
       - layout: top-middle
         title: Chateau Marquis de Terme
         caption: 2015 - 2018
         description: | # this will include new lines to allow paragraphs
-          Assistant oenotourisme et communication digitale
-          - Principales technologies utilisées: Windows - Linux - Nginx - Wordpress - Facebook
+          <font size="4"><center> Assistant oenotourisme et communication digitale </center></font>
+          <font size="4"><center> Principales technologies utilisées: Windows - Linux - Nginx - Wordpress - Facebook </center></font>
 
       - layout: top-middle
         title: Equaline
         caption: 2012 - 2014
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Technicien Hotline <font size="4"><center>
-          <font size="4"><center> - Principales technoligies utilisées: Divers CRM - Windows - outils Cisco <font size="4"><center>
+          <font size="4"><center> Technicien Hotline </center></font>
+          <font size="4"><center> - Principales technoligies utilisées: Divers CRM - Windows - outils Cisco </center></font>
 
       - layout: top-middle
         title: Teleperformance
         caption: 2009 - 2012
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Conseiller technique confirmé <font size="4"><center>
-          <font size="4"><center> - Principales technologies utilisées: Windows, divers CRM <font size="4"><center>
+          <font size="4"><center> Conseiller technique confirmé </center></font>
+          <font size="4"><center> Principales technologies utilisées: Windows, divers CRM </center></font>
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
@@ -91,14 +91,14 @@ content:
         caption: 2020 - 2021
         sub_title: Licence Profesionnelle ADSILLH
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Adminitration / Développement de Systèmes Informatiques à base de Logiciels Libres et Hybrides <font size="4"><center>
+          <font size="4"><center> Adminitration / Développement de Systèmes Informatiques à base de Logiciels Libres et Hybrides </center></font>
 
       - layout: top-middle
         title: WSET School of London
         caption: 2017 - 2017
         sub_titlle: WSET Level 3
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Diplôme International en sommelerie et oenologie (Bac +3) <font size="4"><center>
+          <font size="4"><center> Diplôme International en sommelerie et oenologie (Bac +3) </center></font>
 
       - layout: top-middle
         title: Université de Bordeaux
