--- a/_config.yml
+++ b/_config.yml
@@ -24,19 +24,17 @@ about_profile_image: images/myAvatar.png
 about_content: | # this will include new lines to allow paragraphs
   Marc ... 35 ans ... trail runner ... beer drinker ..... passionné d'informatique et de nouvelles technologies
 
-  Mes points forts: <mark>Linux</mark> --- <mark>Docker</mark> --- <mark>Kubernetes</mark> --- <mark>Ansible</mark>  --- <mark>CI/CD</mark>
-
-  - Mes compétences:
-      - IaC: Ansible, Terraform, K8s, Docker, Packer
-      - OS: Red Hat, CentOs, Debian, Ubuntu, Arch, Windows
-      - Scripting: Bash, Python
-      - CI/CD: Github, Gitlab, Helm, ArgoCD, Flux
-      - Monitoring: Influxdb, Prometheus, Grafana, Telegraf, Loki, Promtail, Centreon
-      - Virtualisation: Proxmox, Vmware (ESXi, Vsphere), Virtualbox, Qemu
-      - Web: Apache, Nginx, Haproxy, Traefik
-      - BDD: Mysql, Mariadb, Postgresql, Mongo, Influxdb
-      - Providers: OVH, AWS
-      - Autres: Veeam, Jira, Confluence
+  - Mon champs d'action:
+      - <mark>IaC</mark>: Ansible, Terraform, K8s, Docker, Packer
+      - <mark>OS</mark>: Red Hat, CentOs, Debian, Ubuntu, Arch, Windows
+      - <mark>Scripting</mark>: Bash, Python
+      - <mark>CI/CD</mark>: Github, Gitlab, Helm, ArgoCD, Flux
+      - <mark>Monitoring</mark>: Influxdb, Prometheus, Grafana, Telegraf, Loki, Promtail, Centreon
+      - <mark>Virtualisation</mark>: Proxmox, Vmware (ESXi, Vsphere), Virtualbox, Qemu
+      - <mark>Web</mark>: Apache, Nginx, Haproxy, Traefik
+      - <mark>BDD</mark>: Mysql, Mariadb, Postgresql, Mongo, Influxdb
+      - <mark>Providers</mark>: OVH, AWS
+      - <mark>Autres</mark>: Veeam, Jira, Confluence
 
 content:
   - title: Certifications # Title for the section
@@ -52,35 +50,35 @@ content:
         link: cgi.com/france/fr-fr
         caption: 2021 - Aujourd'hui
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Ingénieur SysAdmin / Devops </center></font>
+          <font size="4"><center><bold> Ingénieur SysAdmin / Devops </bold></center></font>
           <font size="4"><center>Principales technologies utilisées: Linux - VMWARE - Ansible - Docker - Kubernetes - CI/CD </center></font>
 
       - layout: top-middle
         title: Bureau Feret
         caption: 2018 - 2020
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Courtage Vins - Support Informatique </center></font>
+          <font size="4"><center><bold> Courtage Vins - Support Informatique </bold></center></font>
           <font size="4"><center> Principales technologies utilisées: Docker - Mysql - Linux - Windows </center></font>
 
       - layout: top-middle
         title: Chateau Marquis de Terme
         caption: 2015 - 2018
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Assistant oenotourisme et communication digitale </center></font>
+          <font size="4"><center><bold> Assistant oenotourisme et communication digitale </bold></center></font>
           <font size="4"><center> Principales technologies utilisées: Windows - Linux - Nginx - Wordpress - Facebook </center></font>
 
       - layout: top-middle
         title: Equaline
         caption: 2012 - 2014
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Technicien Hotline </center></font>
-          <font size="4"><center> - Principales technoligies utilisées: Divers CRM - Windows - outils Cisco </center></font>
+          <font size="4"><center><bold> Technicien Hotline </bold></center></font>
+          <font size="4"><center> Principales technoligies utilisées: Divers CRM - Windows - outils Cisco </center></font>
 
       - layout: top-middle
         title: Teleperformance
         caption: 2009 - 2012
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center> Conseiller technique confirmé </center></font>
+          <font size="4"><center><bold> Conseiller technique confirmé </bold></center></font>
           <font size="4"><center> Principales technologies utilisées: Windows, divers CRM </center></font>
 
   - title: Education # Title for the section
