--- a/_config.yml
+++ b/_config.yml
@@ -57,28 +57,28 @@ content:
         title: Bureau Feret
         caption: 2018 - 2020
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center><bold> Courtage Vins - Support Informatique </bold></center></font>
+          <font size="5"><center><bold> Courtage Vins - Support Informatique </bold></center></font>
           <font size="4"><center> Principales technologies utilisées: Docker - Mysql - Linux - Windows </center></font>
 
       - layout: top-middle
         title: Chateau Marquis de Terme
         caption: 2015 - 2018
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center><bold> Assistant oenotourisme et communication digitale </bold></center></font>
-          <font size="4"><center> Principales technologies utilisées: Windows - Linux - Nginx - Wordpress - Facebook </center></font>
+          <font size="5"><center><bold> Assistant oenotourisme et communication digitale </bold></center></font>
+          <font size="4"><center> Principales technologies utilisées: Windows - Linux - Nginx - Wordpress </center></font>
 
       - layout: top-middle
         title: Equaline
         caption: 2012 - 2014
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center><bold> Technicien Hotline </bold></center></font>
-          <font size="4"><center> Principales technoligies utilisées: Divers CRM - Windows - outils Cisco </center></font>
+          <font size="5"><center><bold> Technicien Hotline </bold></center></font>
+          <font size="4"><center> Principales technoligies utilisées: Divers CRM - Windows - Linux </center></font>
 
       - layout: top-middle
         title: Teleperformance
         caption: 2009 - 2012
         description: | # this will include new lines to allow paragraphs
-          <font size="4"><center><bold> Conseiller technique confirmé </bold></center></font>
+          <font size="5"><center><bold> Conseiller technique confirmé </bold></center></font>
           <font size="4"><center> Principales technologies utilisées: Windows, divers CRM </center></font>
 
   - title: Education # Title for the section
@@ -108,12 +108,12 @@ content:
   - title: Hobbies
     layout: text
     content: | # this will include new lines to allow paragraphs
-        <font size="5"><center> Trail running </center></font>
-        <font size="5"><center> Canicross </center></font>
-        <font size="5"><center> Informatique </center></font>
-        <font size="5"><center> Voyages </center></font>
-        <font size="5"><center> Livres Syfy </center></font>
-        <font size="5"><center> Bricolage </center></font>
+        <font size="4"><center> Trail running </center></font>
+        <font size="4"><center> Canicross </center></font>
+        <font size="4"><center> Informatique </center></font>
+        <font size="4"><center> Voyages </center></font>
+        <font size="4"><center> Livres Syfy </center></font>
+        <font size="4"><center> Bricolage </center></font>
 
 # Footer
 footer_show_references: false
