--- a/_config.yml
+++ b/_config.yml
@@ -51,35 +51,35 @@ content:
         caption: 2021 - Aujourd'hui
         description: | # this will include new lines to allow paragraphs
           <font size="5"><center> Ingénieur SysAdmin / Devops </center></font>
-          <font size="4"><center>Principales technologies utilisées: Linux - VMWARE - Ansible - Docker - Kubernetes - CI/CD </center></font>
+          <font size="4"><center> (Linux - VMWARE - Ansible - Docker - Kubernetes - CI/CD) </center></font>
 
       - layout: top-middle
         title: Bureau Feret
         caption: 2018 - 2020
         description: | # this will include new lines to allow paragraphs
           <font size="5"><center><bold> Courtage Vins - Support Informatique </bold></center></font>
-          <font size="4"><center> Principales technologies utilisées: Docker - Mysql - Linux - Windows </center></font>
+          <font size="4"> (Docker - Mysql - Linux - Windows) </center></font>
 
       - layout: top-middle
         title: Chateau Marquis de Terme
         caption: 2015 - 2018
         description: | # this will include new lines to allow paragraphs
           <font size="5"><center><bold> Assistant oenotourisme et communication digitale </bold></center></font>
-          <font size="4"><center> Principales technologies utilisées: Windows - Linux - Nginx - Wordpress </center></font>
+          <font size="4"><center> (Windows - Linux - Nginx - Wordpress) </center></font>
 
       - layout: top-middle
         title: Equaline
         caption: 2012 - 2014
         description: | # this will include new lines to allow paragraphs
           <font size="5"><center><bold> Technicien Hotline </bold></center></font>
-          <font size="4"><center> Principales technoligies utilisées: Divers CRM - Windows - Linux </center></font>
+          <font size="4"><center> (Divers CRM - Windows - Linux) </center></font>
 
       - layout: top-middle
         title: Teleperformance
         caption: 2009 - 2012
         description: | # this will include new lines to allow paragraphs
           <font size="5"><center><bold> Conseiller technique confirmé </bold></center></font>
-          <font size="4"><center> Principales technologies utilisées: Windows, divers CRM </center></font>
+          <font size="4"><center> (Windows, divers CRM) </center></font>
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
