--- a/_config.yml
+++ b/_config.yml
@@ -25,13 +25,13 @@ about_content: | # this will include new lines to allow paragraphs
   Marc ... 35 ans ... trail runner ... beer drinker ..... passionné d'informatique et de nouvelles technologies
 
   - Mon champs d'action:
-      - <mark>IaC</mark>: Ansible, Terraform, K8s, Docker, Packer
+      - <mark>IaC</mark>: Ansible, Terraform, K8s, Helm, Docker, Packer
       - <mark>OS</mark>: Red Hat, CentOs, Debian, Ubuntu, Arch, Windows
-      - <mark>Scripting</mark>: Bash, Python, Rust, Golang, Lua
-      - <mark>CI/CD</mark>: Github, Gitlab, Helm, ArgoCD, Flux
+      - <mark>Scripting</mark>: Bash, Python, Lua, Rust, Golang
+      - <mark>CI/CD</mark>: Github, Gitlab, ArgoCD, Flux
       - <mark>Monitoring</mark>: Influxdb, Prometheus, Grafana, Telegraf, Loki, Promtail, Centreon
       - <mark>Virtualisation</mark>: Proxmox, Vmware (ESXi, Vsphere), Virtualbox, Qemu
-      - <mark>Web</mark>: Apache, Nginx, Haproxy, Traefik, Open
+      - <mark>Web</mark>: Apache, Nginx, Haproxy, Traefik, OpenResty
       - <mark>BDD</mark>: Mysql, Mariadb, Postgresql, Mongo, Influxdb
       - <mark>Providers</mark>: OVH, AWS, Azure
       - <mark>Autres</mark>: Veeam, Jira, Confluence
@@ -46,7 +46,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: CSHIELD - BALEEN
+        title: BALEEN - CSHIELD / CDISCOUNT
         link: https://baleen.cloud
         caption: 2022 - Aujourd'hui
         description: | # this will include new lines to allow paragraphs
