--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ about_content: | # this will include new lines to allow paragraphs
       - <mark>OS</mark>: Red Hat, CentOs, Debian, Ubuntu, Arch, Windows
       - <mark>Scripting</mark>: Bash, Python, Lua, Rust, Golang
       - <mark>CI/CD</mark>: Github, Gitlab, ArgoCD, Flux
-      - <mark>Monitoring</mark>: Influxdb, Prometheus, Grafana, Telegraf, Loki, Promtail, Centreon
+      - <mark>Monitoring</mark>: Influxdb, Prometheus, Grafana, Telegraf, Loki, Promtail, Centreon, Kibana
       - <mark>Virtualisation</mark>: Proxmox, Vmware (ESXi, Vsphere), Virtualbox, Qemu
       - <mark>Web</mark>: Apache, Nginx, Haproxy, Traefik, OpenResty
       - <mark>BDD</mark>: Mysql, Mariadb, Postgresql, Mongo, Influxdb
@@ -48,7 +48,7 @@ content:
       - layout: top-middle
         title: BALEEN - CSHIELD / CDISCOUNT
         link: https://baleen.cloud
-        caption: 2022 - Aujourd'hui
+        caption: Juillet 2022 - Aujourd'hui
         description: | # this will include new lines to allow paragraphs
            <font size="5"><center> Ingénieur Devops </center></font>
            <font size="4"><center> (Linux - Ansible - Docker - Kubernetes - CI/CD - Terraform - Rust - Python) </center></font>
@@ -56,7 +56,7 @@ content:
       - layout: top-middle
         title: CGI
         link: cgi.com/france/fr-fr
-        caption: 2021 - Aujourd'hui
+        caption: 2021 - 2022
         description: | # this will include new lines to allow paragraphs
           <font size="5"><center> Ingénieur SysAdmin / Devops </center></font>
           <font size="4"><center> (Linux - VMWARE - Ansible - Docker - Kubernetes - CI/CD) </center></font>
