feat(resume): update skills

--- a/_config.yml
+++ b/_config.yml
@@ -24,17 +24,17 @@ about_profile_image: images/myAvatar.png
 about_content: | # this will include new lines to allow paragraphs
   Marc ... 36 years old... trail runner ... beer drinker ..... Start Trek fan and overall IT Geek
 
-  <mark>IaC</mark>  Ansible, Terraform, Packer, Vagrant, Cloud-Init
-  <mark>Containerization platforms</mark>  Kubernetes, Docker, LXC
-  <mark>Kubernetes</mark>  Helm, Kustomize, Vault, Trivy, Istio, ArgoCD, Flux
-  <mark>OS</mark>  Red Hat, Fedora, CentOs, Debian, Ubuntu, Arch
-  <mark>Scripting</mark>  Bash, Python, Node.js, Lua
-  <mark>CI/CD</mark>  Github Actions, Gitlab CI, Azure Devops
-  <mark>Observability</mark>  Opentelemetry, Elasticsearch, APM, Kibana, Prometheus, Grafana, Loki, Promtail, Fluentbit, Jaeger
-  <mark>Virtualization</mark>  Proxmox, Vmware ESXi, Virtualbox, Qemu
-  <mark>Web</mark>  Apache, Nginx, HAProxy, Traefik
-  <mark>BDD</mark>  MySQL, MariaDB, PostgreSQL, MongoDB
-  <mark>Providers</mark>  AWS, Azure, OVH, Scaleway
+  <mark>IaC</mark>  Ansible, Terraform, Packer, Vagrant, Cloud-Init.
+  <mark>Containerization platforms</mark>  Kubernetes, Docker, LXC.
+  <mark>Kubernetes</mark>  Helm, Kustomize, Vault, Trivy, Istio, ArgoCD, Flux.
+  <mark>OS</mark>  Red Hat, Fedora, CentOs, Debian, Ubuntu, Arch.
+  <mark>Scripting</mark>  Bash, Python, Node.js, Lua.
+  <mark>CI/CD</mark>  Github Actions, Gitlab CI, Azure Devops.
+  <mark>Observability</mark>  Opentelemetry, Elasticsearch, APM, Kibana, Prometheus, Grafana, Loki, Promtail, Fluentbit, Jaeger.
+  <mark>Virtualization</mark>  Proxmox, Vmware ESXi, Virtualbox, Qemu.
+  <mark>Web</mark>  Apache, Nginx, HAProxy, Traefik.
+  <mark>BDD</mark>  MySQL, MariaDB, PostgreSQL, MongoDB.
+  <mark>Providers</mark>  AWS, Azure, OVH, Scaleway.
 
 content:
   - title: Certifications # Title for the section
